# SpecOps

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  electron.vite.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: release-macos.yml  release.yml  test.yml
app/: README.md  package-lock.json  package.json  vite.config.js  vitest.config.ts  vitest.setup.ts
app/scripts/: import-daylerees-themes.mjs
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/binaries/: README.md  opencode-aarch64-apple-darwin
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: dock_menu.rs  file_watcher.rs  git.rs  git_askpass.rs  lib.rs  opencode_sidecar.rs
docs/: README.md  architecture.md  opencode-integration.md  providers.md
docs/beta/: README.md  chat-http-providers.md  opencode-workspace-sessions.md
fixtures/markdown-resilience/: hostile-uris.md  malformed.md
fixtures/sample/: readme.md
scripts/: check-markdown-links.mjs  update-opencode-sidecar.sh
spec/: changelog.md
specs/: ai-m-2-execution-plan.md  changelog.md  issues-18-07.md  optimizations-baseline.json  optimizations-p7-validation.json  optimizations-plan.md  workspaces-execution-plan.md
specs/git/: backlog.md  manual-test-checklist.md  phase-0-execution-plan.md  phase-1-execution-plan.md  phase-2-execution-plan.md  phase-3-execution-plan.md  (+2 more)
src/: vite-env.d.ts
tests/: editorHighlight.test.ts  markdownSnapshots.test.ts  scrollSync.test.ts  shell.test.ts  specOpsIpc.contract.test.ts
(+1002 files in other folders)
